--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -276,11 +276,13 @@
             </previewer>
         </div>
     </div>
-    <div class="modal" ui-if="weixin_share_panel" ui-state='weixin_share_panel'>
+    <div class="modal" ui-if="weixin_share_panel" ui-state='weixin_share_panel' ui-turn-off="weixin_share_panel">
         <div class="modal-backdrop in"></div>
         <div class="modal-dialog scrollable-dialog" style="margin:0">
-            <div class="kk kk-weixin-share-tip" ng-if="wx_browser" ui-turn-off="weixin_share_panel"></div>
-            <div class="kk kk-weixin-share-qrcode" ng-if="!wx_browser" ui-turn-off="weixin_share_panel"></div>
+            <div class="kk kk-weixin-share-tip" ng-if="wx_browser"></div>
+            <div ng-if="!wx_browser" ui-turn-off="weixin_share_panel">
+                <imageview src="qrcode" data-rate="1"></imageview>
+            </div>
         </div>
     </div>
 </div>
