--- a/src/templates/payment.html
+++ b/src/templates/payment.html
@@ -2,7 +2,7 @@
 <div ui-content-for="title">{{"Payment" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
-    <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
+    <!-- <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span> -->
 </div>
 <div class="scrollable">
     <div class="scrollable-content">
