--- a/src/templates/cash.html
+++ b/src/templates/cash.html
@@ -12,7 +12,7 @@
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Amount" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="number" name="money" class="form-control youyi-flat-input col-xs-8" ng-model="input.money" placeholder="{{'Max. Amount xxx' | translate}}{{wallet.money}}" ng-model="input.money" required>
+                    <input type="number" name="money" class="form-control youyi-flat-input col-xs-8" ng-model="input.money" placeholder="{{'Max. Amount xxx' | translate}}{{wallet.currency_type}}{{wallet.money}}" ng-model="input.money" required>
             </div>
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Bank Name" | translate}}</span>
