--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -137,9 +137,9 @@
                                 JPY
                                 <input type="radio" class="hide" name="currency" ng-model="input.currency " value="JPY"></label>
                         </div>
-                        <div class="section section-wide" ng-show="input.category.name  =='其它'">
+                        <!-- <div class="section section-wide" ng-show="input.category.name  =='其它'">
                             <input type="text" class="form-control rectangle" name="other" ng-model="other">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="section large">
