--- a/src/less/index.less
+++ b/src/less/index.less
@@ -347,9 +347,11 @@
         overflow: hidden;
         text-align: center;
         img {
-            min-width: 300px;
-            min-height: 180px;
-            max-width: 100%;
+            // min-width: 300px;
+            // min-height: 180px;
+            // max-width: 100%;
+            width: 100%;
+            height: 180px;
         }
     }
     .tranlator-intro-bg {
