--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -32,7 +32,7 @@
     <div class="scrollable-content" id="scrollable-content">
         <!-- ng-href="#/translators/{{translator.user_id}}" -->
         <a ng-click="routeTo(translator.user_id)" id="{{'translator_'+translator.user_id}}" class="translator" ng-repeat="translator in translators track by $index">
-            <imageview data-rate="750/422" src="staticImageUrl+translator.bg_image"></imageview>
+            <imageview data-rate="750/422" data-fill="cover" src="staticImageUrl+translator.bg_image"></imageview>
             <span class="translator-intro">
                 <span class="h3 block">
                 <i class="kk kk-icon" ng-class="{'kk-male':translator.gender=='1','kk-female':translator.gender !='1'}"></i>
