--- a/src/templates/me_info.html
+++ b/src/templates/me_info.html
@@ -18,14 +18,14 @@
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Nickname" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="text" name="nickname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Nickname' | translate}}" ng-model="user.nickname" required>
+                    <input type="text" name="nickname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Enter Your Nickname' | translate}}" ng-model="user.nickname" required>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Real Name" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="text" name="realname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Real Name' | translate}}" ng-model="user.name" required>
+                    <input type="text" name="realname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Enter Your Real Name' | translate}}" ng-model="user.name" required>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
             </div>
@@ -96,7 +96,7 @@
             <div class="list-group-item clearfix kk-input-group">
                 <span class="btn col-xs-3 section-wide text-left">{{"Industry" | translate}}</span>
                 <span class="col-xs-9 section-wide">
-                    <input type="text" name="profession" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Industry' | translate}}" ng-model="user.profession" required>
+                    <input type="text" name="profession" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Enter the Industry in Which You are Working' | translate}}" ng-model="user.profession" required>
                 <!-- <span class="tip text-warning">error</span> -->
                 </span>
             </div>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="text-center section large bg-transparent">
-            <button type="submit" class="btn btn-success" ng-disabled="editForm.$invalid">{{"Save" | translate}}</button>
+            <button type="submit" class="btn btn-success">{{"Save" | translate}}</button>
         </div>
     </form>
 </div>
