--- a/src/templates/cash.html
+++ b/src/templates/cash.html
@@ -10,27 +10,27 @@
     <form class="scrollable-content" name="cashForm">
         <div class="list-group">
             <div class="list-group-item clearfix kk-input-group">
-                <span class="btn col-xs-3 section-wide text-left">{{"Amount" | translate}}</span>
-                <span class="col-xs-9 section-wide">
+                <span class="btn col-xs-4 section-wide text-left">{{"Amount" | translate}}({{wallet.currency_type}})</span>
+                <span class="col-xs-8 section-wide">
                     <input type="number" name="money" class="form-control youyi-flat-input col-xs-8" ng-model="input.money" placeholder="{{'Max. Amount xxx' | translate}}{{wallet.currency_type}}{{wallet.money}}" ng-model="input.money" required>
             </div>
             <div class="list-group-item clearfix kk-input-group">
-                <span class="btn col-xs-3 section-wide text-left">{{"Bank Name" | translate}}</span>
-                <span class="col-xs-9 section-wide">
+                <span class="btn col-xs-4 section-wide text-left">{{"Bank Name" | translate}}</span>
+                <span class="col-xs-8 section-wide">
                     <span class="btn">{{input.bank_name}}</span>
                     <!-- <input type="text" name="bank_name" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Enter Complete Bank Name Correctly' | translate}}" ng-model="input.bank_name" required> -->
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
-                <span class="btn col-xs-3 section-wide text-left">{{"Bank Account No." | translate}}</span>
-                <span class="col-xs-9 section-wide">
+                <span class="btn col-xs-4 section-wide text-left">{{"Bank Account No." | translate}}</span>
+                <span class="col-xs-8 section-wide">
                     <span class="btn">{{input.bank_cardno}}</span>
                     <!-- <input type="text" name="bank_cardno" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Please enter'|translate}}" ng-model="input.bank_cardno" required> -->
                 </span>
             </div>
             <div class="list-group-item clearfix kk-input-group">
-                <span class="btn col-xs-3 section-wide text-left">{{"Cardholder Name" | translate}}</span>
-                <span class="col-xs-9 section-wide">
+                <span class="btn col-xs-4 section-wide text-left">{{"Cardholder Name" | translate}}</span>
+                <span class="col-xs-8 section-wide">
                     <span class="btn">{{input.realname}}</span>
                     <!-- <input type="text" name="realname" class="form-control youyi-flat-input col-xs-8" placeholder="{{'Please enter'|translate}}" ng-model="input.realname" required> -->
                 </span>
