--- a/src/templates/translator.html
+++ b/src/templates/translator.html
@@ -177,7 +177,7 @@
                         </a>
                     </li>
                     <li class="divider"></li>
-                    <li>
+                    <li ng-if="wx_browser">
                         <a ui-turn-on="weixin_share_panel">
                             <i class="kk kk-30 kk-weixin"></i>
                             <span class="text-gray">{{"WeChat" | translate}}</span>
