--- a/src/templates/trade_records.html
+++ b/src/templates/trade_records.html
@@ -16,7 +16,7 @@
 					<div class="">{{record.task_title}}</div>
 					<div class="">{{record.task_time}}</div>
 					<div class="">{{"Total"|translate}}：{{record.task_total_money}}</div>
-					<!-- <div class="">{{"xx of the total price is chareged as service fee."|translate:translate_with_value(rate)}}</div> -->
+					<div class="" ng-if="record.type ==1">{{"xx of the total price is chareged as service fee."|translate:translate_with_value(rate)}}</div>
 				</div>
 				<div class="col-xs-3 text-center">
 					<div ng-if="record.type ==1">{{"paid"|translate}}</div>
