--- a/src/templates/modify_phone_email.html
+++ b/src/templates/modify_phone_email.html
@@ -23,6 +23,7 @@
                 <input type="password" name="password" class="form-control" placeholder="{{'Enter Password' | translate}}" ng-model="input.password" required ng-minlength=8 />
                 <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码至少8位</span> -->
             </div>
+            <div class="text-center">{{"Init. Pwd. 666666 for WeChat, Weibo, FB"|translate}}</div>
             <div class="kk-input-group">
                 <button type="submit" ng-disabled="modifyForm.$invalid" class="btn btn-warning block full-width">{{"Confirm" | translate}}</button>
             </div>
