fix wxbrowser download

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -587,4 +587,16 @@ img.media-object {
         width: 168px;
         z-index: 1000;
     }
+    .download-tip {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 206px;
+        height: 178px;
+        background-image: url("../images/download_tip.png");
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: 78%;
+        z-index: 1000;
+    }
 }
