--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -142,6 +142,9 @@
                         </div> -->
                     </div>
                 </div>
+                <div class="section large text-right text-primary">
+                    {{"No more than 4hrs. counts as half day"|translate}}
+                </div>
                 <div class="section large">
                     <div class="semi-auto semi-left-40">
                         <div class="semi-fixed-left semi-wide-40">
