--- a/src/less/index.less
+++ b/src/less/index.less
@@ -16,6 +16,7 @@
     }
     img {
         width: 100%;
+        height: 100%;
     }
 }
 
@@ -391,6 +392,10 @@
         overflow: hidden;
         border: 3px solid white;
         background-color: @app-bg;
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
