--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -290,6 +290,7 @@
                     <div style="margin-top:16px" ng-if="input.editable_key == 'pay_day'">
                         <p>{{"Task below this service charge won't be referred to you. Any task invitation will not be  lower than this daily wage."|translate}}</p>
                         <p>{{"Task fee will be exchanged into your local currency and transferred into your 'Wallet', while the exchange rate varies based on real market rates in a certain period. Our platform charges 10% of the total fee as service fee."|translate}}</p>
+                        <p>{{"No more than 4hrs. counts as half day. If you have different service charges, please elaborate details in your 'Profile'."|translate}}</p>
                     </div>
                 </div>
                 <div class="modal-footer">
