fix history issue

--- a/src/less/override.less
+++ b/src/less/override.less
@@ -51,3 +51,9 @@
 // .sidebar-right-in .sidebar-right {
 //    transform: translate3d(0,0,0);
 // }
+// body {
+// 	max-width: 640px;
+// }
+// .sidebar-left {
+// 	max-width: 500px;
+// }
