--- a/src/less/override.less
+++ b/src/less/override.less
@@ -22,6 +22,9 @@
 .modal .owl-theme .owl-controls {
 	margin-top: 0px;
 }
+.navbar-app .btn {
+	text-transform: inherit;
+}
 // .sidebar-left-in .app, .sidebar-right-in .app  {
 //    transform: translate3d(0,0,0);
 //    background: #ccc;
