fix pc display issue

--- a/src/less/override.less
+++ b/src/less/override.less
@@ -54,9 +54,16 @@
 // .sidebar-right-in .sidebar-right {
 //    transform: translate3d(0,0,0);
 // }
-// body {
-// 	max-width: 640px;
-// }
+body {
+	max-width: 640px;
+	margin: auto auto;
+	position: relative;
+}
+.modal-dialog {
+	max-width: 600px;
+	margin-left: auto;
+	margin-right: auto;
+}
 // .sidebar-left {
 // 	max-width: 500px;
 // }
