--- a/src/templates/me.html
+++ b/src/templates/me.html
@@ -367,7 +367,7 @@
     </div>
     <div class="modal" ui-if="is_translator_panel" ui-state='is_translator_panel'>
         <div class="modal-backdrop in"></div>
-        <div class="modal-dialog" style="margin-top:50%;">
+        <div class="modal-dialog" style="margin-top:75px;">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title text-primary">{{user.is_translate_message}}</h4>
