--- a/src/templates/payment.html
+++ b/src/templates/payment.html
@@ -105,7 +105,7 @@
 <div ui-content-for="modals">
     <div class="modal" ui-if="tips_panel" ui-state='tips_panel'>
         <div class="modal-backdrop in"></div>
-        <div class="modal-dialog" style="margin-top:50%;">
+        <div class="modal-dialog" style="margin-top:75px;">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title text-primary">{{"Please Set Transaction Password First" | translate}}</h4>
