--- a/src/templates/tasks.html
+++ b/src/templates/tasks.html
@@ -71,7 +71,7 @@
 <div ui-content-for="modals">
     <div class="modal" ui-if="agree_panel" ui-state='agree_panel'>
         <div class="modal-backdrop in" ui-turn-off="agree_panel"></div>
-        <div class="modal-dialog" style="margin-top:50%;">
+        <div class="modal-dialog" style="margin-top:75px;">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">{{"Agree Or Not?"| translate}}</h4>
