--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -361,7 +361,7 @@
     </div>
     <div class="modal" ui-if="modal2" ui-state='modal2'>
         <div class="modal-backdrop in"></div>
-        <div class="modal-dialog" style="margin-top:50%;">
+        <div class="modal-dialog" style="margin-top:75px;">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">{{tips}}</h4>
